src/OpenPoseDotNet/PInvoke/Pose/PoseParameters.NativeMethods.cs

using System;
using System.Runtime.InteropServices;

// ReSharper disable once CheckNamespace
namespace OpenPoseDotNet
{

    internal static partial class NativeMethods
    {

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern IntPtr op_getPoseProtoTxt(PoseModel poseModel);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern IntPtr op_getPoseTrainedModel(PoseModel poseModel);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern uint op_getPoseNumberBodyParts(PoseModel poseModel);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern IntPtr op_getPosePartPairs(PoseModel poseModel);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern IntPtr op_getPoseMapIndex(PoseModel poseModel);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern uint op_getPoseMaxPeaks();

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern float op_getPoseNetDecreaseFactor(PoseModel poseModel);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern float op_getPoseDefaultConnectInterMinAboveThreshold(bool maximizePositives);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern float op_getPoseDefaultConnectInterThreshold(PoseModel poseModel, bool maximizePositives);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern uint op_getPoseDefaultMinSubsetCnt(bool maximizePositives);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        public static extern float op_getPoseDefaultConnectMinSubsetScore(bool maximizePositives);

        [DllImport(NativeMethods.NativeLibrary, CallingConvention = NativeMethods.CallingConvention)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool op_addBkgChannel(PoseModel poseModel);

    }

}